moved server to local/, changed from cjs to mjs

--- a/local/package.json
+++ b/local/package.json
@@ -4,7 +4,8 @@
   },
   "type": "module",
   "scripts": {
-    "serve": "node environment.js"
+    "serve@backend": "node environment.js",
+    "serve@frontend": "node server.js"
   },
   "dependencies": {
   }
